Fixed an exception when using this with GenomeSpace.
git-svn-id: http://chianti.ucsd.edu/svn@25820 0ecc0d97-ab19-0410-9704-bfe1a75892f5